@@ -133,13 +133,59 @@ namespace Oak
         }
     }
 
+    public class EagerLoadMany
+    {
+        public DynamicModels Cache { get; set; }
+
+        public bool ShouldDiscardCache(dynamic options)
+        {
+            if (options == null) options = new { discardCache = false };
+
+            options = (options as object).ToPrototype();
+
+            return options.discardCache;
+        }
+
+        public DynamicModels Execute(dynamic options,
+            DynamicRepository repository,
+            string associationName,
+            string selectClause,
+            IEnumerable<dynamic> models,
+            string parentMemberName)
+        {
+            if (ShouldDiscardCache(options)) Cache = null;
+
+            if (Cache != null) return Cache;
+
+            var many = repository.Query(selectClause).ToList();
+
+            foreach (var item in many)
+            {
+                var model = models.First(s => s.Id == item.GetMember(parentMemberName));
+
+                item.SetMember(model.GetType().Name, model);
+            }
+
+            foreach (var model in models)
+            {
+                var assocation = model.AssociationNamed(associationName);
+
+                var relatedTo = many.Where(s => s.GetMember(model.GetType().Name).Equals(model)).Select(s => s);
+
+                assocation.EagerLoadMany.Cache = new DynamicModels(relatedTo);
+
+                assocation.AddNewAssociationMethod(assocation.EagerLoadMany.Cache, model);
+            }
+
+            return new DynamicModels(many);
+        }
+    }
+
     public class HasMany : Association
     {
-        DynamicModels cachedCollection;
-
         public string ForeignKey { get; set; }
 
-        DynamicModels selectManyRelatedToCache;
+        public EagerLoadMany EagerLoadMany { get; set; }
 
         public HasMany(DynamicRepository repository)
             : this(repository, null)
@@ -156,6 +202,8 @@ namespace Oak
 
         public void Init(dynamic model)
         {
+            EagerLoadMany = new EagerLoadMany();
+
             ForeignKey = ForeignKey ?? ForeignKeyFor(model);
 
             var toTable = Repository.GetType().Name;
@@ -193,15 +241,15 @@ namespace Oak
         {
             return (options) =>
             {
-                if (DiscardCache(options)) cachedCollection = null;
+                if (EagerLoadMany.ShouldDiscardCache(options)) EagerLoadMany.Cache = null;
 
-                if (cachedCollection != null) return cachedCollection;
+                if (EagerLoadMany.Cache != null) return EagerLoadMany.Cache;
 
-                cachedCollection = new DynamicModels(Repository.Query(SelectClause(model)));
+                EagerLoadMany.Cache = new DynamicModels(Repository.Query(SelectClause(model)));
 
-                AddNewAssociationMethod(cachedCollection, model);
+                AddNewAssociationMethod(EagerLoadMany.Cache, model);
 
-                return cachedCollection;
+                return EagerLoadMany.Cache;
             };
         }
 
@@ -215,26 +263,11 @@ namespace Oak
             };
         }
 
-        public IEnumerable<dynamic> SelectManyRelatedTo(IEnumerable<dynamic> models, dynamic options)
+        public IEnumerable<dynamic> EagerLoad(IEnumerable<dynamic> models, dynamic options)
         {
-            if (DiscardCache(options)) selectManyRelatedToCache = null;
-
-            if (selectManyRelatedToCache != null) return selectManyRelatedToCache;
-
             var query = SelectClause(models.ToArray());
 
-            var many = Repository.Query(query).ToList();
-
-            foreach (var item in many)
-            {
-                var model = models.First(s => s.Id == item.GetMember(ForeignKey));
-
-                item.SetMember(model.GetType().Name, model);
-            }
-
-            selectManyRelatedToCache = new DynamicModels(many);
-
-            return selectManyRelatedToCache;
+            return EagerLoadMany.Execute(options, Repository, Named, query, models, ForeignKey);
         }
 
         private string SelectClause(params dynamic[] models)
@@ -259,9 +292,7 @@ namespace Oak
 
         DynamicRepository through;
 
-        DynamicModels cachedCollection;
-
-        DynamicModels selectManyRelatedToCache;
+        public EagerLoadMany EagerLoadMany { get; set; }
 
         public string ForeignKey { get; set; }
 
@@ -286,6 +317,8 @@ namespace Oak
 
         public void Init(dynamic model)
         {
+            EagerLoadMany = new EagerLoadMany();
+
             FromColumn = FromColumn ?? ForeignKeyFor(model);
 
             toTable = Repository.GetType().Name;
@@ -312,40 +345,27 @@ namespace Oak
         {
             return (options) =>
             {
-                if (DiscardCache(options)) cachedCollection = null;
+                if (EagerLoadMany.ShouldDiscardCache(options)) EagerLoadMany.Cache = null;
 
-                if (cachedCollection != null) return cachedCollection;
+                if (EagerLoadMany.Cache != null) return EagerLoadMany.Cache;
 
                 var models = (Repository.Query(InnerJoinSelectClause(FromColumn, toTable, throughTable, resolvedForeignKey, model)) as IEnumerable<dynamic>).ToList();
 
                 foreach (var m in models) AddReferenceBackToModel(m, model);
 
-                cachedCollection = new DynamicModels(models);
+                EagerLoadMany.Cache = new DynamicModels(models);
 
-                AddNewAssociationMethod(cachedCollection, model);
+                AddNewAssociationMethod(EagerLoadMany.Cache, model);
 
-                return cachedCollection;
+                return EagerLoadMany.Cache;
             };
         }
 
-        public IEnumerable<dynamic> SelectManyRelatedTo(IEnumerable<dynamic> models, dynamic options)
+        public IEnumerable<dynamic> EagerLoad(IEnumerable<dynamic> models, dynamic options)
         {
-            if (DiscardCache(options)) selectManyRelatedToCache = null;
+            string sql = InnerJoinSelectClause(FromColumn, toTable, throughTable, resolvedForeignKey, models.ToArray());
 
-            if (selectManyRelatedToCache != null) return selectManyRelatedToCache;
-
-            var many = Repository.Query(InnerJoinSelectClause(FromColumn, toTable, throughTable, resolvedForeignKey, models.ToArray())).ToList();
-
-            foreach (var item in many)
-            {
-                var model = models.First(s => s.Id == item.GetMember(FromColumn));
-
-                item.SetMember(model.GetType().Name, model);
-            }
-
-            selectManyRelatedToCache = new DynamicModels(many);
-
-            return selectManyRelatedToCache;
+            return EagerLoadMany.Execute(options, Repository, Named, sql, models, FromColumn);
         }
 
         private DynamicFunction QueryIds(dynamic model)
@@ -361,9 +381,7 @@ namespace Oak
 
     public class HasManyAndBelongsTo : Association
     {
-        dynamic cachedCollection;
-
-        DynamicModels selectManyRelatedToCache;
+        public EagerLoadMany EagerLoadMany { get; set; }
 
         string throughTable;
 
@@ -396,6 +414,8 @@ namespace Oak
 
         public void Init(dynamic model)
         {
+            EagerLoadMany = new EagerLoadMany();
+
             throughTable = CrossRefenceTable ?? throughTable;
 
             fromColumn = FromColumn ?? ForeignKeyFor(model);
@@ -434,9 +454,9 @@ namespace Oak
         {
             return (options) =>
             {
-                if (DiscardCache(options)) cachedCollection = null;
+                if (EagerLoadMany.ShouldDiscardCache(options)) EagerLoadMany.Cache = null;
 
-                if (cachedCollection != null) return cachedCollection;
+                if (EagerLoadMany.Cache != null) return EagerLoadMany.Cache;
 
                 string innerJoinSelectClause = InnerJoinSelectClause(fromColumn, toTable, throughTable, resolvedForeignKey, model);
 
@@ -444,40 +464,25 @@ namespace Oak
 
                 foreach (var m in models) AddReferenceBackToModel(m, model);
 
-                cachedCollection = new DynamicModels(models);
+                EagerLoadMany.Cache = new DynamicModels(models);
 
-                AddNewAssociationMethod(cachedCollection, model);
+                AddNewAssociationMethod(EagerLoadMany.Cache, model);
 
-                return cachedCollection;
+                return EagerLoadMany.Cache;
             };
         }
 
-        public IEnumerable<dynamic> SelectManyRelatedTo(IEnumerable<dynamic> models, dynamic options)
+        public IEnumerable<dynamic> EagerLoad(IEnumerable<dynamic> models, dynamic options)
         {
-            if (DiscardCache(options)) selectManyRelatedToCache = null;
+            var sql = InnerJoinSelectClause(fromColumn, toTable, throughTable, resolvedForeignKey, models.ToArray());
 
-            if (selectManyRelatedToCache != null) return selectManyRelatedToCache;
-
-            var many = Repository.Query(InnerJoinSelectClause(fromColumn, toTable, throughTable, resolvedForeignKey, models.ToArray())).ToList();
-
-            foreach (var item in many)
-            {
-                var model = models.First(s => s.Id == item.GetMember(fromColumn));
-
-                item.SetMember(model.GetType().Name, model);
-            }
-
-            selectManyRelatedToCache = new DynamicModels(many);
-
-            return selectManyRelatedToCache;
+            return EagerLoadMany.Execute(options, Repository, Named, sql, models, fromColumn);
         }
     }
 
     public class HasOne : Association
     {
         public string ForeignKey { get; set; }
-
-        public dynamic HasOneModel { get; set; }
 
         public HasOne(DynamicRepository repository)
             : this(repository, null)
@@ -504,18 +509,32 @@ namespace Oak
             return string.IsNullOrEmpty(ForeignKey) ? ForeignKeyFor(model) : ForeignKey;
         }
 
-        public IEnumerable<dynamic> SelectManyRelatedTo(IEnumerable<dynamic> models, dynamic options)
+        public IEnumerable<dynamic> EagerLoad(IEnumerable<dynamic> models, dynamic options)
         {
-            List<dynamic> collection = new List<dynamic>();
+            var foreignKeyName = ForeignKeyName(models.First());
 
-            models.ForEach(s =>
+            var ones = @"
+            select * from {fromTable} 
+            where {foreignKey}
+            in ({inClause})"
+                .Replace("{fromTable}", Repository.TableName)
+                .Replace("{foreignKey}", foreignKeyName)
+                .Replace("{inClause}", InClause(models));
+
+            var onesResult = new List<dynamic>(Repository.Query(ones));
+
+            foreach (var item in onesResult)
             {
-                var hasOne = s.GetMember(Named)(new { discardCache = false });
-                hasOne.SetMember(s.GetType().Name, s);
-                collection.Add(hasOne);
-            });
+                var model = models.Single(s => s.Id == item.GetMember(foreignKeyName));
 
-            return new DynamicModels(collection);
+                var association = model.AssociationNamed(Named);
+
+                association.Model = model;
+
+                item.SetMember(model.GetType().Name, model);
+            }
+
+            return new DynamicModels(onesResult);
         }
 
         public dynamic GetModelOrCache(dynamic model, dynamic options)
@@ -570,39 +589,54 @@ namespace Oak
                 Repository.GetType().Name,
                 through.GetType().Name,
                 ForeignKeyFor(Repository),
-                model)();
+                new List<dynamic>() { model })();
 
             return Model;
         }
 
-        private DynamicFunction Query(string fromColumn, string toTable, string throughTable, string @using, dynamic model)
+        public string InnerJoinSelectClause(string fromColumn, string toTable, string throughTable, string @using, List<dynamic> models)
         {
-            return () => Repository.Query(
-                @"
-                select {toTable}.*
+            return @"
+                select {toTable}.*, {throughTable}.{fromColumn}
                 from {throughTable}
                 inner join {toTable}
                 on {throughTable}.{using} = {toTable}.Id
-                where {fromColumn} = @0"
+                where {fromColumn} in ({in})"
                     .Replace("{toTable}", toTable)
                     .Replace("{throughTable}", throughTable)
                     .Replace("{using}", @using)
-                    .Replace("{fromColumn}", fromColumn), model.Prototype.Id as object)
-                    .FirstOrDefault();
+                    .Replace("{fromColumn}", fromColumn)
+                    .Replace("{in}", InClause(models));
         }
 
-        public IEnumerable<dynamic> SelectManyRelatedTo(IEnumerable<dynamic> models, dynamic options)
+        private DynamicFunction Query(string fromColumn, string toTable, string throughTable, string @using, List<dynamic> models)
         {
-            List<dynamic> collection = new List<dynamic>();
+            return () => Repository.Query(InnerJoinSelectClause(fromColumn, toTable, throughTable, @using, models)).FirstOrDefault();
+        }
 
-            models.ForEach(s =>
+        public IEnumerable<dynamic> EagerLoad(IEnumerable<dynamic> models, dynamic options)
+        {
+            var foreignKeyName = ForeignKeyName(models.First());
+
+            var sql = InnerJoinSelectClause(foreignKeyName,
+                Repository.GetType().Name,
+                through.GetType().Name,
+                ForeignKeyFor(Repository), models.ToList());
+
+            var onesThrough = new List<dynamic>(Repository.Query(sql));
+
+            foreach (var item in onesThrough)
             {
-                var hasOne = s.GetMember(Named)(new { discardCache = false });
-                hasOne.SetMember(s.GetType().Name, s);
-                collection.Add(hasOne);
-            });
+                var model = models.Single(s => s.Id == item.GetMember(foreignKeyName));
 
-            return new DynamicModels(collection);
+                var association = model.AssociationNamed(Named);
+
+                association.Model = model;
+
+                item.SetMember(model.GetType().Name, model);
+            }
+
+            return new DynamicModels(onesThrough);
         }
     }
 
@@ -615,34 +649,51 @@ namespace Oak
         public BelongsTo(DynamicRepository repository)
             : this(repository, null)
         {
-            
+
         }
 
         public BelongsTo(DynamicRepository repository, string named)
         {
             this.Repository = repository;
+
             Named = named ?? Singular(repository);
         }
 
         public void Init(dynamic model)
         {
+            ForeignKey = string.IsNullOrEmpty(ForeignKey) ? ForeignKeyFor(Repository) : ForeignKey;
+
+            PrimaryKey = string.IsNullOrEmpty(PrimaryKey) ? "Id" : PrimaryKey;
+
             model.SetMember(
                 Named,
                 new DynamicFunctionWithParam((options) => GetModelOrCache(model, options)));
         }
 
-        public IEnumerable<dynamic> SelectManyRelatedTo(IEnumerable<dynamic> models, dynamic options)
+        public IEnumerable<dynamic> EagerLoad(IEnumerable<dynamic> models, dynamic options)
         {
-            List<dynamic> collection = new List<dynamic>();
+            var ones = @"
+            select * from {fromTable} 
+            where {primaryKey}
+            in ({inClause})"
+                .Replace("{fromTable}", Repository.TableName)
+                .Replace("{primaryKey}", PrimaryKey)
+                .Replace("{inClause}", InClause(models));
 
-            models.ForEach(s =>
+            var belongsResult = new List<dynamic>(Repository.Query(ones));
+
+            foreach (var item in belongsResult)
             {
-                var belongsTo = s.GetMember(Named)(new { discardCache = false });
-                belongsTo.SetMember(s.GetType().Name, s);
-                collection.Add(belongsTo);
-            });
+                var model = models.Single(s => s.Id == item.GetMember(PrimaryKey));
 
-            return new DynamicModels(collection);
+                var association = model.AssociationNamed(Named);
+
+                association.Model = model;
+
+                item.SetMember(model.GetType().Name, model);
+            }
+
+            return new DynamicModels(belongsResult);
         }
 
         public dynamic GetModelOrCache(dynamic model, dynamic options)
@@ -651,13 +702,9 @@ namespace Oak
 
             if (Model != null) return Model;
 
-            string foreignKeyName = string.IsNullOrEmpty(ForeignKey) ? ForeignKeyFor(Repository) : ForeignKey;
+            string whereClause = string.Format("{0} = @0", PrimaryKey);
 
-            string primaryKeyName = string.IsNullOrEmpty(PrimaryKey) ? "Id" : PrimaryKey;
-
-            string whereClause = string.Format("{0} = @0", primaryKeyName);
-
-            Model = Repository.SingleWhere(whereClause, model.GetMember(foreignKeyName));
+            Model = Repository.SingleWhere(whereClause, model.GetMember(ForeignKey));
 
             return Model;
         }
