@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="oak-edge" version="1.4.5" targetFramework="net40" />
+  <package id="oak-edge" version="1.4.8" targetFramework="net40" />
   <package id="rake-dot-net" version="1.2.3" />
   <package id="specwatchr" version="1.6.5" targetFramework="net40" />
 </packages>
